--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,24 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html>
-
   <head>
-    <title>Calendar + Stopwatch</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Stopwatch + Calendar</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello World</h1>
+    <div class="stopwatch">
+      <div class="time">
+        <output id="display-area">00:00:00.000</output>
+      </div>
+      <div class="controls">
+        <button id="start">Start</button>
+        <button id="stop">Stop</button>
+        <button id="split">Split</button>
+        <button id="reset">Reset</button>
+      </div>
+    </div>
+    <script src="index.js"></script>
   </body>
-
 </html>
