--- a/templates/index.html
+++ b/templates/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Stopwatch</h1>
     <div class="stopwatch">
       <div class="time">
         <output id="display-area">00:00:00.000</output>
       </div>
       <div class="controls">
+
+        <!--
         <button id="toggle-button" onClick="start()">Start</button>
         <button id="toggle-button" onClick="stop()">Stop</button>
         <button id="reset-button" onClick="reset()">Reset</button>
-        <!--
+        -->
+
         <button id="start">Start</button>
         <button id="stop">Stop</button>
         <button id="split">Split</button>
         <button id="reset">Reset</button>
-            -->
       </div>
     </div>
     <script src="index.js"></script>
