--- a/templates/index.html
+++ b/templates/index.html
@@ -10,21 +10,17 @@
     <h1>Stopwatch</h1>
     <div class="stopwatch">
       <div class="time">
-        <output id="display-area">00:00:00.000</output>
+        <output id="display-stopwatch">00:00:00.000</output>
+        <br/>
+        <output id="display-interval">00:00:00.000</output>
       </div>
       <div class="controls">
-
-        <!--
-        <button id="toggle-button" onClick="start()">Start</button>
-        <button id="toggle-button" onClick="stop()">Stop</button>
-        <button id="reset-button" onClick="reset()">Reset</button>
-        -->
-
         <button id="start">Start</button>
         <button id="stop">Stop</button>
         <button id="split">Split</button>
         <button id="reset">Reset</button>
       </div>
+      <!--Table Goes here-->
     </div>
     <script src="index.js"></script>
   </body>
