--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Stopwatch</h1>
+    <h2>Test</h2>
     <div class="stopwatch">
       <div class="time">
         <output id="display-stopwatch">00:00:00.000</output>
@@ -21,6 +22,7 @@
         <button id="reset">Reset</button>
       </div>
       <!--Table Goes here-->
+      <div id="time-table"></div>
     </div>
     <script src="index.js"></script>
   </body>
